[gd_scene load_steps=15 format=3 uid="uid://btnwudnlfmll3"]

[ext_resource type="Script" uid="uid://cl4cubkjmveaf" path="res://entities/objects/traps/spikes_trap/spike_trap.gd" id="1_4xtkw"]
[ext_resource type="Texture2D" uid="uid://cdg4xe7o7s5ds" path="res://assets/sprites/objects/trap_spikes_anim_strip_7.png" id="2_tpo0v"]
[ext_resource type="Script" uid="uid://dengrtk3dyk4r" path="res://entities/controllers/audio_controller/audio_controller.gd" id="3_jvqbm"]
[ext_resource type="AudioStream" uid="uid://co20ocfx80gf1" path="res://assets/sounds/sfx/others/spike_trap_activated.wav" id="4_8wjpf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jvqbm"]
atlas = ExtResource("2_tpo0v")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wjpf"]
atlas = ExtResource("2_tpo0v")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhyrf"]
atlas = ExtResource("2_tpo0v")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrpxj"]
atlas = ExtResource("2_tpo0v")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyo5s"]
atlas = ExtResource("2_tpo0v")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohi31"]
atlas = ExtResource("2_tpo0v")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgs80"]
atlas = ExtResource("2_tpo0v")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcasb"]
atlas = ExtResource("2_tpo0v")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8y43"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvqbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wjpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhyrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrpxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyo5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohi31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgs80")
}],
"loop": false,
"name": &"active",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcasb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_012ro"]
size = Vector2(16, 1000)

[node name="SpikeTrap" type="Node2D"]
script = ExtResource("1_4xtkw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
sprite_frames = SubResource("SpriteFrames_g8y43")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 492)
shape = SubResource("RectangleShape2D_012ro")

[node name="AudioController" type="Node2D" parent="."]
script = ExtResource("3_jvqbm")
metadata/_custom_type_script = "uid://dengrtk3dyk4r"

[node name="Activated" type="AudioStreamPlayer2D" parent="AudioController"]
stream = ExtResource("4_8wjpf")
volume_db = -15.0
max_distance = 150.0
bus = &"SFX"

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_player_entered"]
